--- a/src/components/ClickCounter/index.css
+++ b/src/components/ClickCounter/index.css
@@ -1,6 +1,9 @@
 .container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  background-color: #f1f5f8;
+  height: 100vh;
   align-items: center;
 }
 
@@ -28,9 +31,10 @@
   background-color: #007bff;
   color: #f1f5f8;
   border-radius: 3px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 15px;
+  padding-right: 15px;
   margin: 8px;
+  border: 0px;
 }
